@@ -1,3 +1,3 @@
-; error: write: expected one argument but no argument was given
+; error: write: expected 1 to 2 arguments but got only 0
 
 ((lambda () (write)))
