@@ -1,3 +1,3 @@
-; error: writeln: expected 0 to 1 arguments but got extra arg(s) (2.0)
+; error: writeln: expected 0 to 2 arguments but got extra arg(s) (t)
 
-((lambda (a b) (writeln a b)) 1 2)
+((lambda (a b) (writeln a b t)) 1 2)
