@@ -1220,3 +1220,5 @@ compiler: argcheck bei let/ let*/ letrec sollte unnötig sein? bei named... ist 
 let dynamic im interpreter
 
 gabriel 3.02_stak.lisp vereinfachen
+
+write, writeln, lnwrite sollten optionalen parameter "print-escape-p" bekommen, default t
